contador de cliques

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <ul id="lista-compras"></ul>
 
   <button id="limpar">🗑 Limpar Lista</button>
+  <p id="contador-cliques">Lista limpa 0 vezes.</p>
 
   <!-- Modal para nome e email -->
   <div id="modal" class="modal">
