versao dark mode

--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
   <button id="limpar">🗑 Limpar Lista</button>
   <p id="contador-cliques">Lista limpa 0 vezes.</p>
 
+  <!-- Configurações -->
+  <div id="configuracoes">
+    <h2>Configurações de Acessibilidade</h2>
+    <button id="toggle-dark">🌙 Modo Escuro</button>
+    <select id="seletor-daltonismo">
+      <option value="">Sem Filtro</option>
+      <option value="protanopia">Protanopia</option>
+      <option value="deuteranopia">Deuteranopia</option>
+      <option value="tritanopia">Tritanopia</option>
+    </select>
+  </div>
+
   <!-- Modal para nome e email -->
   <div id="modal" class="modal">
     <div class="modal-content">
